[gd_scene load_steps=11 format=3 uid="uid://datprjd1ba1pm"]

[ext_resource type="Script" uid="uid://c10oqkdm383sq" path="res://scenes/levels/level_sidescroll.gd" id="1_5s1k5"]
[ext_resource type="Texture2D" uid="uid://csl7y5m1ts245" path="res://assets/parallax/forest/1.png" id="2_5s1k5"]
[ext_resource type="PackedScene" uid="uid://iagcw2du1157" path="res://scenes/general/camera_controller.tscn" id="2_oyyia"]
[ext_resource type="Texture2D" uid="uid://dgr2o33xa4x7x" path="res://assets/parallax/forest/7.png" id="3_okixc"]
[ext_resource type="Texture2D" uid="uid://ye55kp8w3olh" path="res://assets/parallax/forest/6.png" id="4_q7jrl"]
[ext_resource type="Texture2D" uid="uid://bcyb0vsvhl1w3" path="res://assets/parallax/forest/5.png" id="5_8gime"]
[ext_resource type="Texture2D" uid="uid://dopym12svhak8" path="res://assets/parallax/forest/4.png" id="6_keex3"]
[ext_resource type="Texture2D" uid="uid://d2vv5130kwwpf" path="res://assets/parallax/forest/3.png" id="7_dl1cq"]
[ext_resource type="Texture2D" uid="uid://c3d0vtnjw21cf" path="res://assets/parallax/forest/2.png" id="8_i4ohj"]
[ext_resource type="PackedScene" uid="uid://dvmuw4dpglbq1" path="res://scenes/levels/parallax_bg.tscn" id="10_oyyia"]

[node name="LevelSideScroll" type="Node"]
script = ExtResource("1_5s1k5")
lim_left = -1920.0
lim_right = 1920.0
parallax_backgrounds_textures = Array[Texture2D]([ExtResource("3_okixc"), ExtResource("4_q7jrl"), ExtResource("5_8gime"), ExtResource("6_keex3"), ExtResource("7_dl1cq"), ExtResource("8_i4ohj"), ExtResource("2_5s1k5")])

[node name="CameraController" parent="." instance=ExtResource("2_oyyia")]

[node name="ParallaxBg" parent="." instance=ExtResource("10_oyyia")]
